# pokedex

./: Cargo.toml  README.md  TODO.md
builder/: Cargo.toml
builder/examples/: icon.rs  no_audio.rs  run.rs  with_audio.rs
builder/src/: error.rs  items.rs  lib.rs  moves.rs  pokemon.rs
lib/: Cargo.toml
lib/src/: lib.rs  serialized.rs
lib/src/moves/: mod.rs  saved.rs
lib/src/pokemon/: mod.rs
lib/src/pokemon/data/: mod.rs
src/: ailment.rs  battle.rs  dex.rs  id.rs  instance.rs  item.rs  lib.rs  moves.rs  pokemon.rs  serialize.rs  serialized.rs  status.rs  texture.rs  trainer.rs  types.rs
src/battle/: party.rs
src/battle/party/: battle.rs
src/id/: dex.rs  reference.rs
src/item/: bag.rs  mod.rs  stack.rs  usage.rs
src/item/bag/: mod.rs
src/item/script/: mod.rs
src/moves/: instance.rs  mod.rs  owned.rs  persistent.rs  saved.rs  script.rs  serializable.rs  set.rs  target.rs
src/moves/battle_script/: mod.rs
src/moves/script/: action.rs  mod.rs  rhai.rs
src/moves/script/rhai/: damage.rs  moves.rs  pokemon.rs  random.rs
src/moves/usage/: damage.rs  mod.rs  result.rs  script.rs
src/pokemon/: battle.rs  cry.rs  data.rs  generate.rs  instance.rs  mod.rs  nature.rs  owned.rs  party.rs  random.rs  saved.rs  species.rs  stat.rs  status.rs  texture.rs
src/pokemon/data/: breeding.rs  mod.rs  training.rs
src/pokemon/instance/: deserialize.rs  exp.rs  item.rs  moves.rs
src/pokemon/stat/: base.rs  full.rs
src/pokemon/types/: effective.rs
src/types/: effective.rs  mod.rs
