[package]
name = "firecore-pokedex"
version = "0.0.8"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2018"
description = "A pokedex library"
repository = "https://github.com/fiirecore/pokedex/"
readme = "README.md"
license = "MIT"
keywords = ["pokemon", "pokedex"]
categories = ["game-development"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", default-features = false }
tinystr = { version = "0.4", features = ["serde"], default-features = false }
arrayvec = { version = "0.5", features = ["serde"] }
hashbrown = "0.9"

[workspace]
packages = ["builder"]