[package]
name = "dex-builder"
version = "0.3.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[dependencies]

### Pokemon specifications

firecore-pokedex = { path = "../" }

### Serialization

serde = { version = "1.0", features = ["derive"] }
postcard = { version = "0.6", features = ["alloc"] }
toml = "0.5"