[package]
name = "firecore-pokedex-lib"
version = "0.3.0-beta.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[dependencies]
firecore-util = { git = "https://github.com/DoNotDoughnut/firecore-util", default-features = false, features = ["smallvec"] }
serde = { version = "1.0", features = ["derive"] }